<resources>
    <string name="app_name">Team Management App</string>
    <string name="add_player">Add Player</string>
    <string name="settings">Settings:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="players">Players</string>
    <string name="player_name">Player Name</string>
    <string name="player_number">Player Number</string>
    <string name="player_position">Player Position</string>
    <string name="player_age">Player Age</string>
    <string name="team_name">Team Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="save">Save</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to leave without saving?</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="delete_player_title">Delete Player</string>
    <string name="delete_player_message">Are you sure you want to delete this player?</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="team_contact_required">Team contact required</string>
    <string name="team_name_required">Team name is required</string>
    <string name="team_name_unique">Team name must be unique.</string>
    <string name="team_name_capital">Team name must start with a capital letter</string>
    <string name="team_name_length">Team name must be at most 15 characters long.</string>
    <string name="team_logo_required">Team logo is required</string>
    <string name="player_required">At least one player is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="all_fields_required">All fields must be filled out.</string>
    <string name="name_only_letters">Name can only contain letters.</string>
    <string name="player_name_capital">Player name must start with a capital letter</string>
    <string name="name_length">Name cannot be longer than 20 characters.</string>
    <string name="number_range">Number must be between 1 and 99.</string>
    <string name="number_unique">Player number must be unique.</string>
    <string name="position_length">Position must be exactly 2 letters.</string>
    <string name="age_range">Age must be between 0 and 99.</string>
    <string name="english">English</string>
    <string name="hebrew">עברית</string>
    <string name="change_language">Change Language</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="background_color">Background color</string>
    <string name="team_logo">Team_logo</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contact_selected">No contact selected</string>
    <string name="contact_chosen">Contact chosen:</string>
    <string name="max_players_reached">You can add 23 players at max</string>
    <string name="Share_text">"\n                Check out this amazing team management app! \n                It uses MVVM architecture, Room DB for local storage, and Firebase for sending emails. \n                Manage your teams, add players, and connect emails easily. \n                Ideal for coaches and team managers.\n                For more details, visit our GitHub repository: https://github.com/Tal-710/Team_app\n                "</string>
    <string name="share_via">Share via</string>
    <string name="about_text">This team management app is designed with MVVM architecture and utilizes Room DB for local storage and Firebase for sending emails. It allows users to manage teams, add players, and get emails according to changes in team data. Coaches and team managers can easily keep track of their teams and players with this app.</string>
    <string name="about_the_app">About the App</string>
    <string name="share">Share</string>
    <string name="delete_team">Delete Team</string>
    <string name="are_you_sure_you_want_to_delete_this_team">Are you sure you want to delete this team?</string>
    <string name="help">Help</string>
    <string name="for_new_team_press_the_button_and_follow_the_process">For new team press the + button and follow the process.</string>
    <string name="to_delete_players_swipe_the_player_left_or_right_and_press_ok">To delete players, swipe the player left or right and press OK.</string>
    <string name="to_delete_a_team_long_press_on_the_team_logo_and_press_ok">To delete a team, long press on the team logo and press OK.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_contact_number_available">No contact number available</string>
    <string name="can_t_make_call_without_permission">Can\'t make call without permission</string>
    <string name="view_players">View Players</string>
    <string name="button_call_contact">buttonCallContact</string>
    <string name="edit_team">Edit Team</string>
    <string name="about">About</string>
    <string name="add_team">add_team\n</string>
    <string name="microphone">microphone</string>


    <string-array name="football_positions">
        <item>@string/player_position</item>
        <item>CAM</item>
        <item>CB</item>
        <item>CDM</item>
        <item>CF</item>
        <item>CM</item>
        <item>GK</item>
        <item>LB</item>
        <item>LM</item>
        <item>LW</item>
        <item>LWB</item>
        <item>RB</item>
        <item>RM</item>
        <item>RW</item>
        <item>RWB</item>
        <item>SS</item>
        <item>ST</item>
        <item>SW</item>
    </string-array>
</resources>